--- a/client/src/app/pages/main-page/main-page.component.html
+++ b/client/src/app/pages/main-page/main-page.component.html
@@ -8,9 +8,14 @@
             <button class="button1" mat-raised-button color="second" style="background-color: bisque" (click)="setClassicRules()">
                 Scrabble classique
             </button>
-            <button class="button2" mat-raised-button color="second" style="background-color: bisque" (click)="setLOG2990()">Scrabble LOG2990</button>
+            <button class="button2" mat-raised-button color="second" style="background-color: bisque" (click)="setLOG2990()">
+                Scrabble LOG2990
+            </button>
             <button class="button3" mat-raised-button color="second" style="background-color: bisque" (click)="openDialogHighScores()">
                 Meilleurs scores
+            </button>
+            <button class="button3" mat-raised-button color="second" style="background-color: bisque" (click)="openAdmin()">
+                Mode Admin
             </button>
             <!-- <button mat-raised-button color="primary" routerLink="/game">Jouer!</button> -->
         </div>
